-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1, 10.0
-
Labels:None
-
Sprint:10.2.1-5, 10.2.2-1, 10.2.2-2, 10.0.29
This script makes the server crash on assert in debug builds:
DROP TABLE IF EXISTS t1; |
CREATE TABLE t1 (a INT); |
INSERT INTO t1 VALUES (10); |
DROP VIEW IF EXISTS v1; |
CREATE VIEW v1 AS SELECT * FROM t1 FOR UPDATE; |
mysqld: /home/bar/maria-git/server.10.2/sql/table_cache.cc:853: bool tdc_remove_table(THD*, enum_tdc_remove_table_type, const char*, const char*, bool): Assertion `remove_type == TDC_RT_REMOVE_UNUSED || thd->mdl_context.is_lock_owner(MDL_key::TABLE, db, table_name, MDL_EXCLUSIVE)' failed.
|
 |
Program received signal SIGABRT, Aborted.
|
[Switching to Thread 0x7ffff7f7cf00 (LWP 29487)]
|
0x00007ffff5b9ea98 in __GI_raise (sig=sig@entry=6)
|
at ../sysdeps/unix/sysv/linux/raise.c:55
|
55 return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
|
FOR UPDATE should probably be disallowed in VIEWs.
- relates to
-
MDEV-8909 union parser cleanup
-
- Closed
-
-
MDEV-10063 VIEWs and subqueries with FOR UPDATE
-
- Open
-