MDEV-10035: DBUG_ASSERT on CREATE VIEW v1 AS SELECT * FROM t1 FOR UPDATE

Ability to print lock type added.
Restoring correct lock type for CREATE VIEW added.