sql/sql_lex.h
@@ -925,6 +925,9 @@ public:
 
   table_map with_dep;
 
+  /* it is for correct printing SELECT options */
+  thr_lock_type lock_type;
+
   void init_query();
   void init_select();
   st_select_lex_unit* master_unit() { return (st_select_lex_unit*) master; }
